# tempo-worklog-cli

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
src/tempo_worklog_cli/: cli.py  constants.py  create_worklogs.py  time_span.py  work_log.py  worklog_creator.py
src/tempo_worklog_cli/util/: io_util.py  serialization.py
src/tempo_worklog_creator/: __main__.py  cli.py  constants.py  create_worklogs.py  io_util.py  time_span.py  work_log.py  worklog_creator.py
src/tempo_worklog_creator/util/: date_util.py  io_util.py  serialization.py
test/: test_time_span.py  test_work_logs.py
test/util/: test_serialization.py
